--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "boilermaker",
+  "name": "Benjamin_Odisho_Portfolio",
   "version": "1.0.0",
-  "description": "Some boilerplate code to get you started - get shakin'!",
+  "description": "A generative portfolio for Benjamin Odisho, meant to recreate itself on each visit.",
   "engines": {
     "node": ">= 7.0.0"
   },
@@ -37,6 +37,7 @@
     "prop-types": "^15.5.8",
     "react": "^16.0.0",
     "react-dom": "^16.0.0",
+    "react-p5-wrapper": "0.0.4",
     "react-redux": "^5.0.2",
     "react-router-dom": "^4.1.1",
     "redux": "^3.6.0",
